# urbana

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  setup.cfg  setup.py
data/interim/: neigh.csv  neigh_geo.json  neighbourhoods.csv  sections.csv  sections_17_01.csv  sections_17_02.csv  sections_17_03.csv  sections_17_04.csv  sections_17_05.csv  sections_17_06.csv  sections_17_08.csv  sections_17_09.csv  sections_17_10.csv  sections_17_11.csv  sections_17_12.csv  sections_18_01.csv  sections_18_02.csv  sections_18_04.csv  sections_18_05.csv  sections_18_06.csv  sections_18_07.csv  sections_18_08.csv  sections_18_09.csv  sections_18_10.csv  sections_18_11.csv  sections_18_12.csv  sections_19_01.csv  sections_19_02.csv  sections_19_03.csv  sections_19_04.csv  sections_19_05.csv  sections_19_06.csv  sections_19_07.csv  sections_19_08.csv  sections_19_09.csv  sections_19_10.csv  sections_19_11.csv  sections_19_12.csv  sections_2017_01.csv  sections_2017_02.csv  (+33 more)
data/interim/prueba/: neighbourhoods_geo.json
data/raw/: 2019_censcomercialbcn_class_act.csv
docs/: commands.rst  index.rst  project_organization.rst
docs/getting_started/: ENVIRONMENT.rst  INSTALL.rst  getting_started.rst
notebooks/: 00acquisition.ipynb  01linear.ipynb  01raw_linear.ipynb  02gwr.ipynb  03_complete_pipeline.ipynb  linear_best.txt
notebooks/neighbourhood/: 00acquisition_neighbourhood.ipynb  01linear_neighbourhood.ipynb  02gwr_neighbourhood.ipynb  linear_best_neighbouhood.txt
src/urbana/: constants.py
tests/: test_urbana.py
(+225 files in other folders)
