[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
files=src/urbana,tests
ignore_missing_imports=true

[tool:pytest]
testpaths=tests/
addopts =
    --cov
    --verbose
norecursedirs =
    dist
    build
    .tox

[metadata]
project_name     = urbana
package_name     = urbana
version          = 0.1.0
url              = https://github.com/egregorimar/urbana
github_url       = https://github.com/egregorimar/urbana
license          =
author_name      = Ernesto Gregori
author_email     = ernesto.gregori@no-mail
description      = Urban Data Analytics
